--- a/vitProfile/index.html
+++ b/vitProfile/index.html
@@ -12,6 +12,11 @@
     <div id="header">
       <h1>I'm Lesya, a beginner designer and frontend developer </h1>
       <p id="underHeader">Glad to see you!</p>
+      <ul>
+        <li><button><p>WORK</p></button></li>
+        <li><button><p>WORK</p></button></li>
+        <li><button><p>WORK</p></button></li>
+      </ul>
     </div>  
 
     <div id="MyAPPP"></div>  
