--- a/vitProfile/index.html
+++ b/vitProfile/index.html
@@ -14,8 +14,8 @@
       <p id="underHeader">Glad to see you!</p>
       <ul>
         <li><button><p>WORK</p></button></li>
-        <li><button><p>WORK</p></button></li>
-        <li><button><p>WORK</p></button></li>
+        <li><button><p>CONTACT</p></button></li>
+        <!-- <li><button><p>WORK</p></button></li> -->
       </ul>
     </div>  
 
